<resources>
    <string name="app_name">CMPS 3640 Proj</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inbox">Inbox</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="app_logo">App Logo</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="message">Message</string>

    <!-- New and Updated Strings for Login and Signup Pages -->
    <string name="signup_title">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="login_button_text">Log In</string>
    <string name="send">Send</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="enter_recipient_email">Enter recipient email</string>
    <string name="enter_subject">Enter subject</string>
    <string name="subject">Subject</string>
    <string name="to">To</string>
</resources>
