<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inbox">

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.example.cmps3640proj.ui.inbox.InboxFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/nav_compose"
        android:name="com.example.cmps3640proj.ui.compose.ComposeFragment"
        android:label="@string/menu_compose"
        tools:layout="@layout/fragment_compose" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.cmps3640proj.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
</navigation>